After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 697887 - GVariant: fix transfer annotation
GVariant: fix transfer annotation
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gvariant
unspecified
Other All
: Normal normal
: ---
Assigned To: Allison Karlitskaya (desrt)
gtkdev
Depends on:
Blocks:
 
 
Reported: 2013-04-12 15:25 UTC by Giovanni Campagna
Modified: 2013-04-16 13:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GVariant: fix transfer annotation (849 bytes, patch)
2013-04-12 15:26 UTC, Giovanni Campagna
committed Details | Review

Description Giovanni Campagna 2013-04-12 15:25:58 UTC
g_variant_new_from_bytes() returns a floating reference, so it
must be annotated (transfer none)
Comment 1 Giovanni Campagna 2013-04-12 15:26:01 UTC
Created attachment 241359 [details] [review]
GVariant: fix transfer annotation
Comment 2 Allison Karlitskaya (desrt) 2013-04-16 13:52:02 UTC
Review of attachment 241359 [details] [review]:

Thanks for the catch.  Please apply to glib-2-36 branch as well.
Comment 3 Giovanni Campagna 2013-04-16 13:58:05 UTC
Attachment 241359 [details] pushed as d171e83 - GVariant: fix transfer annotation